--- a/p8105_hw5_hz2772.rmd
+++ b/p8105_hw5_hz2772.rmd
@@ -158,3 +158,40 @@ arm_data %>%
 ```
 
 **A:** According to the plot, it's clear that the data value from experimental arm group is generally bigger than the control arm group. 
+
+
+## Problem 3
+```{r,warning=FALSE}
+set.seed(10)
+
+iris_with_missing = iris %>% 
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+  mutate(Species = as.character(Species))
+
+
+fill_in_missing = function(vector){
+  if(is.numeric(vector)) {
+    fill_value = round(mean(!is.na(vector)),1)
+    vector[which(is.na(vector))] = fill_value
+  }
+  if(is.character(vector)) {
+    vector[which(is.na(vector))] = "virginica"
+  }
+  return(vector)
+}
+
+iris_with_missing = 
+  iris_with_missing %>%
+    mutate(
+      Sepal.Length = map(Sepal.Length,fill_in_missing),
+      Sepal.Width = map(Sepal.Width,fill_in_missing),
+      Petal.Length = map(Petal.Length,fill_in_missing),
+      Petal.Width = map(Petal.Width,fill_in_missing),
+      Species = map(Species,fill_in_missing)
+    ) %>% 
+  unnest(Sepal.Length,Sepal.Width,Petal.Length,Petal.Width,Species)
+
+```                                        
+
+
+
