manipulate file names to include control arm and subject ID.

--- a/p8105_hw5_hz2772.md
+++ b/p8105_hw5_hz2772.md
@@ -168,17 +168,16 @@ homicide_df %>%
 ``` r
 arm_file =
   tibble(
-    files = str_c("./data/zip_data/",list.files("./data/zip_data"))
+    files = list.files("./data/zip_data")
   ) 
-
 arm_data = 
   arm_file %>%
   mutate(
-    subject_id = rep(c(1:10),2),
-    type = c(rep("con",10),rep("exp",10)),
-    data = purrr::map(files,read.csv)) %>%
-  unnest(data) %>%
-  select(-files) 
+    data = purrr::map(str_c("./data/zip_data/",files),read.csv)
+    ) %>%
+  separate(files,into = c("type","subject_id"),sep = "_") %>%
+  mutate(subject_id = str_replace(subject_id, ".csv", "")) %>%
+  unnest(data) 
 
 arm_data %>% 
   pivot_longer(
